2005-02-17  Benhur Stein <benhur@inf.ufsm.br>
	* General/NSUserDefaults+Colors.[hm]: add -doubleForKey:
	  and -setDouble:forKey: methods (should change file name as
	  it doesn't only deal with colors.
	* SpaceTime/DrawView.m: save and restore time scale in defaults
	  database

2005-01-23 (1.3.1) Vincent Danjean <Vincent.Danjean@ens-lyon.org>
	* Add Makfiles to compile the documentation
	* Remove undefined references in lang-paje
	* New official release 
	  - bump to 1.3 as there are few features (filters)

2005-01-23  Benhur Stein <benhur@inf.ufsm.br>
	* SpaceTimeViewer/HierarchyRuler.m: change rect size calculations
	  to be on pair with recent GNUstep bugfixes

2005-01-23  Benhur Stein <benhur@inf.ufsm.br>
	* General/UniqueString.m: comment out some debug messages

2005-01-20  Benhur Stein <benhur@inf.ufsm.br>
	* SpaceTimeViewer/DrawView.[hm]: workaround a probable bug in GNUstep
	  ([NSScrollView tile] is changing the frame size)

2005-01-20  Benhur Stein <benhur@inf.ufsm.br>
	* Documentation/lang-paje/{typeevent.tex,lang-paje.tex}:
	  comment the inclusion of some files, to make the documentation
	  compile.

2005-01-09  Benhur Stein <benhur@inf.ufsm.br>
        * SpaceTimeViewer/STEntityTypeLayout.[hm]: declare and implement
          accessors for minValue and maxValue (for storing limits of graph)
	* SpaceTimeViewer/STEntityTypeLayout.gorm: added a new Form for
          max & min values of variables; 
        * SpaceTimeViewer/STEntityTypeLayoutController.[mh]: make use of new
          variables and Form (they are not saved in defaults);
        * SpaceTimeViewer/DrawView+Drawing.m: use min and maxValue from 
          descriptor, if valid.

2005-01-05  Benhur Stein <benhur@inf.ufsm.br>
	* GNUmakefile, Paje/PajeController.m, Paje/PajeTraceController.m:
	  compile and load FieldFilter

2005-01-05  Benhur Stein <benhur@inf.ufsm.br>
	* FieldFilter, FieldFilter/FieldFilterDescriptor.h,
	  FieldFilter/FieldFilter.h, FieldFilter/FieldFilterDescriptor.m,