@@ -1,8 +1,14 @@
 2005-02-17  Benhur Stein <benhur@inf.ufsm.br>
+	* Make sure Shapes&Sizes tool is informed when trace hierarchy
+	  changes (adds an instance variable to STController, must
+	  do a "make clean" before doing "make").
+	* fixes bug #301194
+
+2005-02-17  Benhur Stein <benhur@inf.ufsm.br>
 	* General/NSUserDefaults+Colors.[hm]: add -doubleForKey:
 	  and -setDouble:forKey: methods (should change file name as
 	  it doesn't only deal with colors.
-	* SpaceTime/DrawView.m: save and restore time scale in defaults
+	* SpaceTimeViewer/DrawView.m: save and restore time scale in defaults
 	  database
 
 2005-01-23 (1.3.1) Vincent Danjean <Vincent.Danjean@ens-lyon.org>
